properly take constness during overload resolution into account

we prefer non-const overloads to const ones if we are accessing
a non-const object now, this is also what g++ does by default
as far as I can see

BUG: 267877